Resolve deprecation: `Class#newInstance()` -> `Constructor#newInstance()`